--- a/Sjuklöner/Views/Claims/Create4.cshtml
+++ b/Sjuklöner/Views/Claims/Create4.cshtml
@@ -30,47 +30,77 @@
     </div>
     <div class="row">
         <div class="form-horizontal">
-            @Html.ValidationSummary(true, "", new { @class = "text-danger font-size-11" })
+            @*@Html.ValidationSummary(true, "", new { @class = "text-danger font-size-11" })*@
 
-            <div class="form-group">
+            <div class="row row-height-26">
                 @Html.LabelFor(model => model.SalaryAttachment, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    <input type="file" name="SalaryAttachment" id="SalaryAttachment" class="btn btn-default" />
+                    <input type="file" name="SalaryAttachment" id="SalaryAttachment" class="wide-input btn btn-default" />
+                </div>
+            </div>
+            <div class="row row-height-14">
+                <div class="col col-md-offset-2 col-md-10">
+                    @Html.ValidationMessageFor(model => model.SalaryAttachment, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="row row-height-26">
                 @Html.LabelFor(model => model.SalaryAttachmentStandIn, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    <input type="file" name="SalaryAttachmentStandIn" id="SalaryAttachmentStandIn" class="btn btn-default" />
+                    <input type="file" name="SalaryAttachmentStandIn" id="SalaryAttachmentStandIn" class="wide-input btn btn-default" />
+                </div>
+            </div>
+            <div class="row row-height-14">
+                <div class="col col-md-offset-2 col-md-10">
+                    @Html.ValidationMessageFor(model => model.SalaryAttachmentStandIn, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="row row-height-26">
                 @Html.LabelFor(model => model.DoctorsCertificate, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    <input type="file" name="DoctorsCertificate" id="DoctorsCertificate" class="btn btn-default" />
+                    <input type="file" name="DoctorsCertificate" id="DoctorsCertificate" class="wide-input btn btn-default" />
+                </div>
+            </div>
+            <div class="row row-height-14">
+                <div class="col col-md-offset-2 col-md-10">
+                    @Html.ValidationMessageFor(model => model.DoctorsCertificate, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="row row-height-26">
                 @Html.LabelFor(model => model.SickLeaveNotification, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    <input type="file" name="SickLeaveNotification" id="SickLeaveNotification" class="btn btn-default" />
+                    <input type="file" name="SickLeaveNotification" id="SickLeaveNotification" class="wide-input btn btn-default" />
+                </div>
+            </div>
+            <div class="row row-height-14">
+                <div class="col col-md-offset-2 col-md-10">
+                    @Html.ValidationMessageFor(model => model.SickLeaveNotification, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="row row-height-26">
                 @Html.LabelFor(model => model.TimeReport, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    <input type="file" name="TimeReport" id="TimeReport" class="btn btn-default" />
+                    <input type="file" name="TimeReport" id="TimeReport" class="wide-input btn btn-default" />
+                </div>
+            </div>
+            <div class="row row-height-14">
+                <div class="col col-md-offset-2 col-md-10">
+                    @Html.ValidationMessageFor(model => model.TimeReport, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="row row-height-26">
                 @Html.LabelFor(model => model.TimeReportStandIn, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    <input type="file" name="TimeReportStandIn" id="TimeReportStandIn" class="btn btn-default" />
+                    <input type="file" name="TimeReportStandIn" id="TimeReportStandIn" class="wide-input btn btn-default" />
+                </div>
+            </div>
+            <div class="row row-height-14">
+                <div class="col col-md-offset-2 col-md-10">
+                    @Html.ValidationMessageFor(model => model.TimeReportStandIn, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
 
