--- a/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
@@ -19,8 +19,8 @@
         else
         {
             <div class="col col-md-6 left-margin-12 font-size-16">
-                Information om två assistenter krävs för att kunna skapa en ansökan. 
-                <p class="col-no-left-padding">@Html.ActionLink("Klicka här ", "Create", "Assistants", null, null)för att lägga in assistenter.</p>
+                Välkommen! Du är nu registrerad som ombud för @Model.CompanyName. För att kunna skapa en ansökan krävs information om två assistenter. Den ena är den insjuknade ordinarie assistenten och den andra är den vikarierande assistenten. 
+                <p class="col-no-left-padding">@Html.ActionLink("Klicka här ", "Create", "Assistants", null, null)för att skapa assistenter.</p>
             </div>
         }
         @using (Html.BeginForm("IndexPageOmbud", "Claims", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
@@ -141,14 +141,20 @@
                         <th class="small-col-ombud">
                             Skapad datum
                         </th>
+                        <th class="xsmall-col-ombud">
+                            Steg
+                        </th>
                         <th class="small-col-ombud">
                             Kundens personnummer
                         </th>
-                        <th class="small-col-ombud">
+                        <th class="ssmall-col-ombud">
                             Första sjukdag
                         </th>
-                        <th class="small-col-ombud">
+                        <th class="ssmall-col-ombud">
                             Sista sjukdag
+                        </th>
+                        <th class="ssmall-col-ombud">
+                            Antal sjukdagar
                         </th>
                         <th class="medium-col">
                             Yrkat belopp (Kr)
@@ -160,39 +166,45 @@
 
                     @foreach (var item in Model.DraftClaims)
                     {
-                        <tr>
-                            <td>
-                                @*@Html.ActionLink(item.ReferenceNumber, "_ShowClaim", "Claims", new { refNumber = item.ReferenceNumber }, new { @class = "btn btn-primary btn-primary-small" })*@
-                                @Html.ActionLink(item.ReferenceNumber, "_ShowClaim", new { refNumber = item.ReferenceNumber }, new { @class = "btn-sm js-show-view-btn btn btn-primary btn-primary-small" })
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.StatusDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.CustomerSSN)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.QualifyingDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ClaimedSum)
-                            </td>
-                            <td>
-                                @Html.ActionLink("Uppdatera", "Create1", new { refNumber = item.ReferenceNumber }, new { @role = "button", @class = "btn btn-secondary btn-secondary-small" })
-                            </td>
-                            <td>
-                                @Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" })
-                            </td>
-                            <td>
-                                @*@Html.ActionLink("Skicka in", "SaveAmounts", new { id = item.Id }, new { @class = "btn btn-secondary btn-secondary-small" })*@
-                                @*@Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
-                                    @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
-                                    @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })*@
-                            </td>
-                        </tr>
+                    <tr>
+                        <td>
+                            @*@Html.ActionLink(item.ReferenceNumber, "_ShowClaim", "Claims", new { refNumber = item.ReferenceNumber }, new { @class = "btn btn-primary btn-primary-small" })*@
+                            @Html.ActionLink(item.ReferenceNumber, "_ShowClaim", new { refNumber = item.ReferenceNumber }, new { @class = "btn-sm js-show-view-btn btn btn-primary btn-primary-small" })
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.StatusDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CompletionStage)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CustomerSSN)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.QualifyingDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.NumberOfSickDays)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ClaimedSum)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Uppdatera", "Create1", new { refNumber = item.ReferenceNumber }, new { @role = "button", @class = "btn btn-secondary btn-secondary-small" })
+                        </td>
+                        <td>
+                            @Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" })
+                        </td>
+                        <td>
+                            @*@Html.ActionLink("Skicka in", "SaveAmounts", new { id = item.Id }, new { @class = "btn btn-secondary btn-secondary-small" })*@
+                            @*@Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
+            @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
+            @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })*@
+                        </td>
+                    </tr>
                     }
 
                 </table>
