Updated path for uploaded documents

--- a/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
@@ -757,7 +757,7 @@
                     <div class="col col-md-5">
                         <div class="form-group line-height-12">
                             <div class="row display-padding">
-                                <a target="_blank" href="@Href($"~/Uploads/{Model.ReferenceNumber}/{Model.Documents.Where(d => d.Title == "SalaryAttachment").FirstOrDefault().Filename}")">
+                                <a target="_blank" href="@Href($"~/sjukloner/{Model.ReferenceNumber}/{Model.Documents.Where(d => d.Title == "SalaryAttachment").FirstOrDefault().Filename}")">
                                     Lönespecifikation, ordinarie
                                 </a>
                             </div>
@@ -766,7 +766,7 @@
                     <div class="col col-md-5">
                         <div class="form-group line-height-12">
                             <div class="row display-padding6">
-                                <a target="_blank" href="@Href($"~/Uploads/{Model.ReferenceNumber}/{Model.Documents.Where(d => d.Title == "SalaryAttachmentStandIn").FirstOrDefault().Filename}")">
+                                <a target="_blank" href="@Href($"~/sjukloner/Uploads/{Model.ReferenceNumber}/{Model.Documents.Where(d => d.Title == "SalaryAttachmentStandIn").FirstOrDefault().Filename}")">
                                     Lönespecifikation, vikarie
                                 </a>
                             </div>
@@ -777,7 +777,7 @@
                     <div class="col col-md-5">
                         <div class="form-group line-height-12">
                             <div class="row display-padding">
-                                <a target="_blank" href="@Href($"~/Uploads/{Model.ReferenceNumber}/{Model.Documents.Where(d => d.Title == "SickLeaveNotification").FirstOrDefault().Filename}")">
+                                <a target="_blank" href="@Href($"~/sjukloner/Uploads/{Model.ReferenceNumber}/{Model.Documents.Where(d => d.Title == "SickLeaveNotification").FirstOrDefault().Filename}")">
                                     Sjukfrånvaroanmälan
                                 </a>
                             </div>
@@ -788,7 +788,7 @@
                         <div class="col col-md-5">
                             <div class="form-group line-height-12">
                                 <div class="row display-padding6">
-                                    <a target="_blank" href="@Href($"~/Uploads/{Model.ReferenceNumber}/{Model.Documents.Where(d => d.Title == "DoctorsCertificate").FirstOrDefault().Filename}")">
+                                    <a target="_blank" href="@Href($"~/sjukloner/Uploads/{Model.ReferenceNumber}/{Model.Documents.Where(d => d.Title == "DoctorsCertificate").FirstOrDefault().Filename}")">
                                         Läkarintyg
                                     </a>
                                 </div>
@@ -800,7 +800,7 @@
                     <div class="col col-md-5">
                         <div class="form-group line-height-12">
                             <div class="row display-padding">
-                                <a target="_blank" href="@Href($"~/Uploads/{Model.ReferenceNumber}/{Model.Documents.Where(d => d.Title == "TimeReport").FirstOrDefault().Filename}")">
+                                <a target="_blank" href="@Href($"~/sjukloner/Uploads/{Model.ReferenceNumber}/{Model.Documents.Where(d => d.Title == "TimeReport").FirstOrDefault().Filename}")">
                                     Tidsredovisning, Försäkringskassan, ordinarie assistent
                                 </a>
                             </div>
@@ -809,7 +809,7 @@
                     <div class="col col-md-5">
                         <div class="form-group line-height-12">
                             <div class="row display-padding6">
-                                <a target="_blank" href="@Href($"~/Uploads/{Model.ReferenceNumber}/{Model.Documents.Where(d => d.Title == "TimeReportStandIn").FirstOrDefault().Filename}")">
+                                <a target="_blank" href="@Href($"~/sjukloner/Uploads/{Model.ReferenceNumber}/{Model.Documents.Where(d => d.Title == "TimeReportStandIn").FirstOrDefault().Filename}")">
                                     Tidsredovisning, Försäkringskassan, vikarierande assistent
                                 </a>
                             </div>
