--- a/Sjuklöner/Views/Shared/_Layout.cshtml
+++ b/Sjuklöner/Views/Shared/_Layout.cshtml
@@ -67,7 +67,36 @@
             </div>
         </div>
     }
-    else if (Url.Action().ToString().Length < 15 || Url.Action().ToString().ToLower() != "/claims/stodsystemlogin" && Url.Action().ToString().ToLower().Remove(14) != "/claims/decide" & Url.Action().ToLower().ToString() != "/claims/stodsystemlogout")
+    else if (User.IsInRole("Admin"))
+    {
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container no-padding-left">
+                <div class="navbar-header">
+                    <img class="helsingborg-logo" src="~/Content/Images/helsingborg.svg" /><img class="bitoreq-logo" src="~/Content/Images/Big_blue_black.png" />
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+            </div>
+            <div class="blue-bar">
+                <div class="blue-bar-filler" style="width:75%; margin-left: auto; margin-right: auto; float: none;">
+                    <ul style="padding-left:4px;">
+                        <li>@Html.ActionLink("Kollektivavtal", "Index", "CollectiveAgreements", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
+                        <li>@Html.ActionLink("Handläggare", "NewAdmOff", "Account", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
+                        <li>@Html.ActionLink("Ansökningar", "Index", "Claims", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
+                        <li>@Html.ActionLink("Bolagsuppgifter", "Index", "CareCompanies", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
+                        <li>@Html.ActionLink("Assistenter", "Index", "Assistants", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
+                        <li>@Html.ActionLink("Ombud", "IndexOmbud", "CareCompanies", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
+                    </ul>
+                    @Html.Partial("_LoginPartial")
+                </div>
+
+            </div>
+        </div>
+    }
+    else
     {
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container no-padding-left">
