Added hidden for to send CollAgreementHeader.Name back to controller.

--- a/Sjuklöner/Views/CollectiveAgreements/Edit.cshtml
+++ b/Sjuklöner/Views/CollectiveAgreements/Edit.cshtml
@@ -54,6 +54,7 @@
             <div class="col col-md-8 collective-agreement-header">*@
         <p class="collective-agreement-header">
             @Model.CollAgreementHeader.Name
+            @Html.HiddenFor(c => c.CollAgreementHeader.Name)
         </p>
         @*</div>
             </div>*@
