Made changes to Create2 view layout.

--- a/Sjuklöner/Views/Claims/Create2.cshtml
+++ b/Sjuklöner/Views/Claims/Create2.cshtml
@@ -196,7 +196,7 @@
 
 
                     @*Stand-in assistant*@
-                    <div class="col col-md-2 date-padding date-margin2">
+                    <div class="col col-md-2 date-padding date-margin">
                         @for (int i = 0; i < Model.ScheduleRowList.Count(); i++)
                         {
                             <div class="row row-height-42 line-height-06">
